unpackaged/main/default/objects/Financial_Aid__c/Financial_Aid__c.object-meta.xml
<CustomObject>
    <description>Tracks a student&#39;s federal financial aid. These records are used on the Sales Document (Invoice) object.</description>
    <label>Financial Aid</label>
    <nameField>
        <label>Financial Aid Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Aid</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>