unpackaged/main/default/objects/Financial_Aid__c/fields/Aid_Type__c.field-meta.xml
<CustomField>
    <fullName>Aid_Type__c</fullName>
    <label>Aid Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsubsidized Student Loan</fullName>
            </value>
            <value>
                <fullName>Federal Pell Grant</fullName>
            </value>
            <value>
                <fullName>Subsidized Student Loan</fullName>
            </value>
            <value>
                <fullName>Parent Plus Loan</fullName>
            </value>
            <value>
                <fullName>Private Alternative Loan</fullName>
            </value>
            <value>
                <fullName>Outside_Scholarship</fullName>
                <label>Outside Scholarship</label>
            </value>
            <value>
                <fullName>Student Loan - LEGACY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>