unpackaged/main/default/objects/Financial_Aid__c/fields/Disbursed_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disbursed_Loan_Amount__c</fullName>
    <inlineHelpText>Loan amount disbursed to the student via schools of record.</inlineHelpText>
    <label>Disbursed Aid Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>