unpackaged/main/default/objects/Financial_Aid__c/fields/FAFSA_Filed__c.field-meta.xml
<CustomField>
    <fullName>FAFSA_Filed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FAFSA Filed?</label>
    <type>Checkbox</type>
</CustomField>