unpackaged/main/default/objects/Financial_Aid__c/fields/Sales_Document__c.field-meta.xml
<CustomField>
    <fullName>Sales_Document__c</fullName>
    <label>Sales Document</label>
    <referenceTo>bt_stripe__Sales_Document__c</referenceTo>
    <relationshipName>Federal_Aid</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>