unpackaged/main/default/objects/Financial_Aid__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Federal_Aid</relationshipName>
    <type>Lookup</type>
</CustomField>