unpackaged/main/default/objects/Financial_Aid__c/fields/Tentative_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Loan_Amount__c</fullName>
    <inlineHelpText>The dollar amount of financial aid that the student is expecting (tentative)</inlineHelpText>
    <label>Tentative Aid Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>